--- a/css/style.css
+++ b/css/style.css
@@ -1965,6 +1965,7 @@ textarea.input {
   border: none;
   border-radius: 0px 40px 40px 0px;
 }
+btn btn-primary btn-block
 
 .newsletter .newsletter-follow {
   text-align: center;
